--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ django-cloudinary-storage==0.3.0
 djangorestframework==3.14.0
 idna==3.4
 Pillow==10.1.0
+Pygments==2.16.1
 python-dotenv==1.0.0
 pytz==2023.3.post1
+redgreenunittest==0.1.1
 requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
