--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.3.2
 cloudinary==1.36.0
 Django==4.2.7
 django-cloudinary-storage==0.3.0
+django-filter==23.3
 djangorestframework==3.14.0
 idna==3.4
 Pillow==10.1.0
