--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,29 @@
 asgiref==3.7.2
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==3.3.2
 cloudinary==1.36.0
+cryptography==41.0.5
+defusedxml==0.7.1
+dj-rest-auth==5.0.1
 Django==4.2.7
+django-allauth==0.55.2
 django-cloudinary-storage==0.3.0
 django-filter==23.3
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 idna==3.4
+oauthlib==3.2.2
 Pillow==10.1.0
+pycparser==2.21
 Pygments==2.16.1
+PyJWT==2.8.0
 python-dotenv==1.0.0
+python3-openid==3.2.0
 pytz==2023.3.post1
 redgreenunittest==0.1.1
 requests==2.31.0
+requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
