--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,21 @@ charset-normalizer==3.3.2
 cloudinary==1.36.0
 cryptography==41.0.5
 defusedxml==0.7.1
+dj-database-url==2.1.0
 dj-rest-auth==5.0.1
-Django==4.2.7
+Django==4.1.13
 django-allauth==0.55.2
 django-cloudinary-storage==0.3.0
+django-cors-headers==4.3.0
 django-filter==23.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+gunicorn==21.2.0
 idna==3.4
 oauthlib==3.2.2
+packaging==23.2
 Pillow==10.1.0
+psycopg2==2.9.9
 pycparser==2.21
 Pygments==2.16.1
 PyJWT==2.8.0
